@@ -1,0 +1,41 @@
+// glassplayer.cpp
+//
+// glassplayer(1) Audio Encoder
+//
+//   (C) Copyright 2014-2016 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#include <QCoreApplication>
+
+#include "cmdswitch.h"
+#include "glassplayer.h"
+
+MainObject::MainObject(QObject *parent)
+  : QObject(parent)
+{
+  CmdSwitch *cmd=
+    new CmdSwitch(qApp->argc(),qApp->argv(),"glassplayer",GLASSPLAYER_USAGE);
+  for(unsigned i=0;i<cmd->keys();i++) {
+  }
+}
+
+
+int main(int argc,char *argv[])
+{
+  QCoreApplication a(argc,argv);
+  new MainObject();
+  return a.exec();
+}
