@@ -1,2 +1,4 @@
 2016-01-07 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2016-01-07 Fred Gleason <fredg@paravelsystems.com>
+	* Stubbed out 'glassplayer(7).
